--- a/res/layout/third_fragment.xml
+++ b/res/layout/third_fragment.xml
@@ -39,8 +39,8 @@
                 app:sliderIndicatorRadius="2dp"
                 app:sliderIndicatorSelectedColor="#5A5A5A"
                 app:sliderIndicatorUnselectedColor="#FFF"
-                app:sliderScrollTimeInSec="3"
-                app:sliderStartAutoCycle="true" />/>
+                app:sliderScrollTimeInSec="4"
+                app:sliderStartAutoCycle="true" />
 
             <androidx.recyclerview.widget.RecyclerView
 
