--- a/res/layout/activity_coupon.xml
+++ b/res/layout/activity_coupon.xml
@@ -73,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cardi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 <View
