--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -75,8 +75,8 @@
             android:id="@+id/search_bar25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:focusedByDefault="true"
             android:iconifiedByDefault="false"
+            android:focusable="false"
             android:queryHint="Search items">
         </SearchView>
             <LinearLayout
