--- a/res/layout/activity_2.xml
+++ b/res/layout/activity_2.xml
@@ -5,104 +5,102 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity2"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="#F0F0ED">
+    android:gravity="center"
+    android:background="#FFFFFF"
+    android:padding="16dp">
 
-<ScrollView
-    android:scrollbars="none"
-    android:gravity="center_horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:gravity="center_horizontal"
+    <ScrollView
+        android:scrollbars="none"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logo3"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="50dp"/>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-       >
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:padding="20dp"
+            android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal">
+            android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <AutoCompleteTextView
-            android:textColor="#000000"
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:autofillHints="Username"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textEmailAddress"
-            />
-
-
-        <EditText
-            android:textColor="#000000"
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:autofillHints=""
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"/>
-
-    </LinearLayout>
-
-
-            <TextView
-                android:layout_gravity="right"
-                android:id="@+id/forget_password"
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:padding="20dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Forgot Password"
-                android:textStyle="bold"
-                android:clickable="true"/>
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:background="#6ca414"
-        android:layout_marginTop="16dp"
-        android:textStyle="bold"
-        />
+                <TextView
+                    android:layout_marginBottom="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textFontWeight="20"
+                    android:text="You are just one step away from your order"
+                    android:textColor="#000000"
+                    android:textSize="20dp"/>
 
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Signup"
-        android:background="@android:color/transparent"
-        android:layout_marginTop="16dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/filledTextField"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:boxStrokeColor="#0C73EB"
+                        app:boxStrokeWidth="2dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        android:hint="Mobile No."
+                        app:hintTextColor="#0C73EB"
+                        app:prefixText="+91">
+
+                        <!--this is the actual edit text which takes the input-->
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/username"
+                            android:textColor="#000000"
+                            android:inputType="phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+                <TextView
+                    android:textColor="#98AFC7"
+                    android:layout_marginTop="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="A 6 digit OTP will be sent via SMS to verify your mobile number."/>
+
+
+                <TextView
+                    android:layout_marginTop="25dp"
+                    android:id="@+id/back_button"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:text="Back"
+                    android:textColor="#0C73EB"/>
+            </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </ScrollView>
+    <LinearLayout
+        android:gravity="bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Continue"
+            android:textAllCaps="false"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:background="@drawable/round_button"
+            android:layout_marginTop="16dp"
+            android:textStyle="bold"
+            />
     </LinearLayout>
-</ScrollView>
 </LinearLayout>
