--- a/res/layout/activity_change_address.xml
+++ b/res/layout/activity_change_address.xml
@@ -5,105 +5,185 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChangeAddress"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:background="#F0F0ED">
-    <ScrollView
-        android:scrollbars="none"
-        android:gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:gravity="center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-    <ImageView
-        android:layout_gravity="center"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logo3"
-        android:layout_marginBottom="25dp"
-        android:layout_marginTop="25dp"/>
-
-    <androidx.cardview.widget.CardView
+    android:gravity="center"
+    android:orientation="vertical">
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
-        <LinearLayout
-            android:padding="20dp"
+        app:boxStrokeColor="#0C73EB"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:hint="Name"
+        app:boxStrokeWidth="0.5dp"
+        app:hintTextColor="#0C73EB">
+
+        <!--this is the actual edit text which takes the input-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/name_change"
+            android:textColor="#000000"
+            android:inputType="textPersonName"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <LinearLayout
+
+        android:weightSum="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_weight="1"
+            app:boxStrokeWidth="0.5dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal">
-            <TextView
+            app:boxStrokeColor="#0C73EB"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:hint="Pincode"
+            app:hintTextColor="#0C73EB">
+
+            <!--this is the actual edit text which takes the input-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/pincode_change"
                 android:textColor="#000000"
-                android:layout_gravity="left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Update your details :-"/>
-    <AutoCompleteTextView
-        android:id="@+id/new_address1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="Username"
-        android:ems="10"
-        android:textColor="#000000"
-        android:hint="House/Flat no, Wing"
-        android:inputType="textPostalAddress"
-        />
+                android:inputType="number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <AutoCompleteTextView
-        android:textColor="#000000"
-        android:id="@+id/new_address2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="Username"
-        android:ems="10"
-        android:hint="Apartment/Area"
-        android:inputType="textPostalAddress"
-        />
+        </com.google.android.material.textfield.TextInputLayout>
+        <Button
+            android:id="@+id/verify_change"
+            android:background="@drawable/semi_round_button"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textAllCaps="false"
+            android:minHeight="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Check Availability"/>
+    </LinearLayout>
 
-    <AutoCompleteTextView
-        android:textColor="#000000"
-        android:id="@+id/new_address3"
+    <LinearLayout
+        android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints="Username"
-        android:ems="10"
-        android:hint="Road, City"
-        android:inputType="textPostalAddress"
-        />
+        android:orientation="horizontal">
 
-    <EditText
-        android:textColor="#000000"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Mobile number"
-        android:id="@+id/mobile"
-        android:inputType="number"/>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_weight="1"
+            app:boxStrokeWidth="0.5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:boxStrokeColor="#0C73EB"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:hint="State"
+            app:hintTextColor="#0C73EB">
 
-    <EditText
-        android:textColor="#000000"
+            <!--this is the actual edit text which takes the input-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/state_change"
+                android:textColor="#000000"
+                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_weight="1"
+            app:boxStrokeWidth="0.5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:boxStrokeColor="#0C73EB"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:hint="City"
+            app:hintTextColor="#0C73EB">
+
+            <!--this is the actual edit text which takes the input-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/city_change"
+                android:textColor="#000000"
+                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        app:boxStrokeWidth="0.5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_height="wrap_content"
+        app:boxStrokeColor="#0C73EB"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:hint="House No./Building Name"
+        app:hintTextColor="#0C73EB">
+
+        <!--this is the actual edit text which takes the input-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/house_change"
+            android:textColor="#000000"
+            android:inputType="textPostalAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Alternate mobile"
-        android:id="@+id/mobile1"
-        android:inputType="number"/>
-    <Button
-        android:layout_marginTop="16dp"
-        android:textStyle="bold"
-        android:id="@+id/submit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:background="#6ca414"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-        </LinearLayout>
-    </ScrollView>
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:boxStrokeColor="#0C73EB"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:hint="Road name, Area, Colony"
+        app:boxStrokeWidth="0.5dp"
+        app:hintTextColor="#0C73EB">
+
+        <!--this is the actual edit text which takes the input-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/road_change"
+            android:textColor="#000000"
+            android:inputType="text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="bottom">
+        <Button
+            android:textColor="#FFFFFF"
+            android:id="@+id/save_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_button"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:layout_margin="50dp"
+            android:text="Save details" />
+
+    </LinearLayout>
 </LinearLayout>
