--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -4,13 +4,13 @@
 
 
     <item
+        android:id="@+id/my_money_1"
+        android:iconTint="#FFFFFF"
+        app:showAsAction="ifRoom" />
+
+
+    <item
         android:id="@+id/action_add"
         android:icon="@drawable/cart_icon"
         app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/wish_list"
-        android:icon="@drawable/p"
-        app:showAsAction="ifRoom"
-        android:title="wishlist" />
 </menu>
