--- a/res/layout/activity_coupon.xml
+++ b/res/layout/activity_coupon.xml
@@ -84,6 +84,12 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/coupon_view"
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="false" />
     <LinearLayout
         android:gravity="bottom"
         android:layout_width="wrap_content"
