--- a/res/layout/activity_my_money.xml
+++ b/res/layout/activity_my_money.xml
@@ -83,7 +83,7 @@
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You will receive this amount on the delivery of your next order."
+        android:text="You will receive this balance on the delivery of your next order."
         android:id="@+id/availment" />
 
     <TextView
