--- a/res/layout/coupen.xml
+++ b/res/layout/coupen.xml
@@ -14,6 +14,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/text_coupon"
             android:textSize="20dp"
@@ -24,12 +29,19 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:textSize="15dp"
+            android:layout_gravity="end"
+            android:textSize="20dp"
             android:textColor="#000000"
             android:id="@+id/text_percent"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        </LinearLayout>
+        <TextView
+            android:textSize="20dp"
+            android:id="@+id/condition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
