--- a/res/layout/about_us_fragment.xml
+++ b/res/layout/about_us_fragment.xml
@@ -31,7 +31,7 @@
                 android:padding="20dp"
                 android:textStyle="bold"
                 android:textSize="18dp"
-                android:textColor="@color/colorAccent"
+                android:textColor="#ED5A6B"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="मोंडकर्स फूड परिवारात आपले स्वागत आहे !"/>
