--- a/res/layout/activity_change_address.xml
+++ b/res/layout/activity_change_address.xml
@@ -170,19 +170,23 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="bottom">
-        <Button
+        android:orientation="vertical">
+        <com.google.android.material.button.MaterialButton
             android:textColor="#FFFFFF"
+            app:cornerRadius="10dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:id="@+id/save_change"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#ED5A6B"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
-            android:layout_margin="50dp"
             android:text="Save details" />
 
     </LinearLayout>
