--- a/res/layout/activity_confirm.xml
+++ b/res/layout/activity_confirm.xml
@@ -85,7 +85,7 @@
                     android:paddingRight="2.5dp"
                     android:paddingBottom="5dp"
                     android:text="Change"
-                    android:textColor="#fa638c" />
+                    android:textColor="#ED5A6B" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -168,17 +168,16 @@
             app:cardElevation="10dp"></androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#6ca414"
-        android:outlineProvider="paddedBounds"
-        android:paddingLeft="2.5dp"
-        android:paddingTop="5dp"
-        android:paddingRight="2.5dp"
-        android:paddingBottom="5dp"
-        android:text="Confirm"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:backgroundTint="#ED5A6B"
+        android:padding="10dp"
+        android:text="confirm order"
+        app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
