--- a/res/layout/activity_my_cart.xml
+++ b/res/layout/activity_my_cart.xml
@@ -158,7 +158,7 @@
                         android:background="@android:color/transparent"
                         android:outlineProvider="paddedBounds"
                         android:text="Change"
-                        android:textColor="#fa638c" />
+                        android:textColor="#ED5A6B" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -377,9 +377,13 @@
                         android:text="Apply Coupon Code"
                         android:id="@+id/coupon"
                         android:textAllCaps="false"
-                        android:textColor="#fa638c"
+                        android:textColor="#ED5A6B"
                         android:layout_marginLeft="10dp"/>
                     <TextView
+                        android:enabled="false"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/total_save"/>
@@ -393,6 +397,7 @@
         app:cardElevation="10dp"
         android:visibility="invisible"
         android:id="@+id/card2"
+        android:foregroundGravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -400,15 +405,17 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:orientation="vertical">
         <TextView
+            android:layout_gravity="center_vertical"
             android:id="@+id/total_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:text="Total cost : "
             android:textColor="#000000"
             android:textSize="30dp"
@@ -419,16 +426,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buy_all"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Place order"
-                android:background="#FF8C00"/>
+                app:cornerRadius="5dp"
+                android:backgroundTint="#ED5A6B"/>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
