--- a/res/layout/activity_my_money.xml
+++ b/res/layout/activity_my_money.xml
@@ -83,7 +83,7 @@
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You will receive this balance on the delivery of your next order."
+        android:text="Share the app and once the referred user orders, you will get the reward money of 10% of his order as cashback on your next order"
         android:id="@+id/availment" />
 
     <TextView
@@ -95,15 +95,17 @@
         android:text="Keep Earning, Keep Sharing !"
         android:textColor="#000000"/>
 
-    <Button
-        android:layout_gravity="center_horizontal"
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/share"
         android:layout_width="wrap_content"
-        android:text="Share the app"
-        android:textColor="#000000"
-        android:padding="16dp"
-        android:drawableLeft="@drawable/ic_menu_share"
-        android:background="@drawable/add_button"
         android:layout_height="wrap_content"
-        android:id="@+id/share"/>
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:text="Share the app"
+        android:drawableLeft="@drawable/ic_menu_share"
+        app:cornerRadius="5dp"
+        android:backgroundTint="#ED5A6B"/>
 
 </LinearLayout>
