--- a/res/layout/coupen.xml
+++ b/res/layout/coupen.xml
@@ -6,10 +6,11 @@
     android:layout_margin="5dp"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
+    style="Theme.MaterialComponents.DayNight.Bridge"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:padding="20dp"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -28,34 +29,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_gravity="end"
-            android:textSize="20dp"
-            android:textColor="#000000"
-            android:id="@+id/text_percent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="20dp"
+                    android:textColor="#000000"
+                    android:id="@+id/text_percent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
         </LinearLayout>
         <TextView
-            android:textSize="20dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/condition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <LinearLayout
+            android:gravity="right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right">
 
-            <Button
-                android:layout_marginTop="-10dp"
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/apply10"
-                android:textAllCaps="false"
-                android:text="Apply"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:textColor="#fa638c"/>
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="10dp"
+                android:text="Apply"
+                app:cornerRadius="5dp"
+                android:backgroundTint="#ED5A6B"/>
         </LinearLayout>
     </LinearLayout>
 
