--- a/res/layout/fragment_gallery.xml
+++ b/res/layout/fragment_gallery.xml
@@ -9,22 +9,6 @@
     android:background="#F0F0ED"
     >
 
-    <Button
-        android:visibility="invisible"
-        android:id="@+id/track"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#6ca414"
-        android:outlineProvider="paddedBounds"
-        android:paddingLeft="2.5dp"
-        android:paddingTop="5dp"
-        android:paddingRight="2.5dp"
-        android:paddingBottom="5dp"
-        android:text="Track Status"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ProgressBar
         android:id="@+id/progressbar"
         android:layout_width="wrap_content"
@@ -186,19 +170,18 @@
                                 android:text="\u20B90"
                                 android:textColor="#000000" />
 
-
                             <TextView
-                                android:id="@+id/coupon_discount"
+                                android:id="@+id/od"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/order_cost"
+                                android:layout_below="@+id/op"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="10dp"
-                                android:text="Coupon Discount"
+                                android:text="Delivery charges"
                                 android:textColor="#000000" />
 
                             <TextView
-                                android:id="@+id/order_discount_price"
+                                android:id="@+id/onum_charges"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/order_cost"
@@ -212,7 +195,7 @@
                                 android:id="@+id/earning_discount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/coupon_discount"
+                                android:layout_below="@+id/od"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="10dp"
                                 android:text="Your Earning"
@@ -222,7 +205,7 @@
                                 android:id="@+id/earning_discount_price"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/order_discount_price"
+                                android:layout_below="@+id/onum_charges"
                                 android:layout_alignParentRight="true"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="20dp"
@@ -230,17 +213,17 @@
                                 android:textColor="#000000" />
 
                             <TextView
-                                android:id="@+id/od"
+                                android:id="@+id/coupon_discount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/earning_discount"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="10dp"
-                                android:text="Delivery charges"
+                                android:text="Coupon Discount"
                                 android:textColor="#000000" />
 
                             <TextView
-                                android:id="@+id/onum_charges"
+                                android:id="@+id/order_discount_price"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/earning_discount_price"
@@ -250,11 +233,13 @@
                                 android:text="\u20B90"
                                 android:textColor="#000000" />
 
+
+
                             <com.xfinity.dahdit.DashedLine
                                 android:id="@+id/dashed"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/onum_charges"
+                                android:layout_below="@+id/order_discount_price"
                                 android:layout_marginTop="10dp"
                                 app:dashColor="#5b4837"
                                 app:dashHeight="2dp"
@@ -293,4 +278,20 @@
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </LinearLayout>
+    <Button
+        android:visibility="invisible"
+        android:id="@+id/track"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ED5A6B"
+        android:outlineProvider="paddedBounds"
+        android:paddingLeft="2.5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="2.51dp"
+        android:paddingBottom="5dp"
+        android:text="Track Status"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+<!--Amey-->
 </androidx.constraintlayout.widget.ConstraintLayout>
