--- a/res/layout/nav_header_main2.xml
+++ b/res/layout/nav_header_main2.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="wrap_content"
     android:background="#b83d0f"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -13,6 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
+        android:layout_marginTop="30dp"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/logo"/>
