--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#F9F8FA</color>
-    <color name="colorAccent">#fa638c</color>
+    <color name="colorAccent">#ED5A6B</color>
+    <color name="mtrl_textinput_default_box_stroke_color">#0C73EB</color>
+    <color name="mtrl_textinput_default_hint_color">#0C73EB</color>
 </resources>
