--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,15 +1,16 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#b83d0f</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="CustomDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="colorPrimaryDark">#000000</item>
     </style>
@@ -27,35 +28,44 @@
         <item name="android:textColorSecondary">#FFFFFF</item>
     </style>
 
-    <style name="ColorTheme" parent="Theme.AppCompat.Light">
+    <style name="ColorTheme" parent="Theme.MaterialComponents.DayNight.Bridge">
         <item name="colorPrimary">#b83d0f </item>
         <item name="title">My Cart</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
-    <style name="ColorTheme10" parent="Theme.AppCompat.Light">
+
+    <style name="paymentActivity" parent="Theme.MaterialComponents.DayNight.Bridge">
+        <item name="colorPrimary">#b83d0f </item>
+        <item name="title">Payment</item>
+        <item name="android:statusBarColor">#A52A2A</item>
+        <item name="android:textColorPrimary">#ffffff</item>
+        <item name="colorAccent">#ED5A6B</item>
+    </style>
+
+    <style name="ColorTheme10" parent="Theme.MaterialComponents.DayNight.Bridge">
         <item name="colorPrimary">#b83d0f </item>
         <item name="title">My Earnings</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
-    <style name="UpdateActivity" parent="Theme.AppCompat.Light">
+    <style name="UpdateActivity" parent="Theme.MaterialComponents.DayNight.Bridge">
         <item name="colorPrimary">#b83d0f </item>
         <item name="title">Update</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
-    <style name="ConfirmActivity" parent="Theme.AppCompat.Light">
+    <style name="ConfirmActivity" parent="Theme.MaterialComponents.DayNight.Bridge">
         <item name="colorPrimary">#b83d0f </item>
         <item name="title">Confirm Your Order</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="CouponActivity" parent="Theme.MaterialComponents.DayNight.Bridge">
@@ -64,7 +74,7 @@
         <item name="title">Apply Coupons</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="ChangeAddress" parent="Theme.MaterialComponents.DayNight.Bridge">
@@ -72,7 +82,7 @@
         <item name="title">Change Address</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="Activity2" parent="Theme.MaterialComponents.DayNight.Bridge">
@@ -80,7 +90,7 @@
         <item name="title">Login</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="ActivityUserDetails" parent="Theme.MaterialComponents.DayNight.Bridge">
@@ -88,37 +98,37 @@
         <item name="title">Enter your details</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
     <style name="OTPActivity" parent="Theme.MaterialComponents.DayNight.Bridge">
         <item name="colorPrimary">#b83d0f </item>
         <item name="title">Mobile Verification</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
     <style name="ForgetPassword" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">#b83d0f </item>
         <item name="title">Password Recovery</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="ColorTheme2" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">#b83d0f </item>
-        <item name="title">My Wishlist</item>
+        <item name="title">Favourites</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
-    <style name="ColorTheme5" parent="Theme.AppCompat.Light">
+    <style name="ColorTheme5" parent="Theme.MaterialComponents.DayNight.Bridge">
         <item name="colorPrimary">#b83d0f </item>
         <item name="title">My Orders</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="ColorTheme3" parent="Theme.AppCompat.Light">
@@ -126,7 +136,7 @@
         <item name="title">About us</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="ColorTheme4" parent="Theme.AppCompat.Light">
@@ -134,7 +144,7 @@
         <item name="title">Contact us</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
     <style name="TrackActivity" parent="Theme.AppCompat.Light">
@@ -142,7 +152,7 @@
         <item name="title">Track your Order</item>
         <item name="android:statusBarColor">#A52A2A</item>
         <item name="android:textColorPrimary">#ffffff</item>
-        <item name="colorAccent">#fa638c</item>
+        <item name="colorAccent">#ED5A6B</item>
     </style>
 
 </resources>
